# OmniStats

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTION_EXCEPTION.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  vcpkg.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  clang-format.yml  secret-scan.yml
benchmarks/: bench_DatabaseManager.cpp  bench_StatsParser.cpp
docs/: ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  PRIVACY.md  TROUBLESHOOTING.md
installer/wix/: installer.wxs  license.rtf
resources/: installer.rc.in  omnistats.rc.in  updater.rc.in
src/: main.cpp
src/core/: AppVersion.hpp  Config.cpp  Config.hpp  Constants.hpp  DashboardLayoutConfig.cpp  DashboardLayoutConfig.hpp  DiscordPresenceSnapshot.hpp  FileHash.hpp  GamemodeUtils.cpp  GamemodeUtils.hpp  InputManager.cpp  InputManager.hpp  KeyPressSimulator.hpp  MatchSaveSnapshot.hpp  OverlayLayoutConfig.cpp  OverlayLayoutConfig.hpp  PrivacyLog.hpp  SessionState.cpp  SessionState.hpp  SideEffectExecutor.cpp  SideEffectExecutor.hpp  SideEffects.hpp  StatsApiConfig.cpp  StatsApiConfig.hpp  StatsScope.hpp  Storage.cpp  Storage.hpp  TelemetryReducer.cpp  TelemetryReducer.hpp
src/database/: DatabaseManager.cpp  DatabaseManager.hpp
src/installer/: main.cpp
src/network/: CurlImpersonate.cpp  CurlImpersonate.hpp  DiscordManager.cpp  DiscordManager.hpp  ExternalUpdaterLauncher.cpp  ExternalUpdaterLauncher.hpp  MMRFetcher.cpp  MMRFetcher.hpp  ReplayUploader.cpp  ReplayUploader.hpp  ShortcutUtils.cpp  ShortcutUtils.hpp  StatsClient.cpp  StatsClient.hpp  TelemetryManager.cpp  TelemetryManager.hpp  TelemetryParser.cpp  TelemetryParser.hpp  Updater.cpp  Updater.hpp  UpdaterCommon.cpp  UpdaterCommon.hpp  UpdaterDownload.cpp  UpdaterDownload.hpp  UpdaterPaths.cpp  UpdaterPaths.hpp  UpdaterProcess.cpp  UpdaterProcess.hpp
src/ui/: D3D11Device.cpp  D3D11Device.hpp  DashboardLayout.cpp  DashboardLayout.hpp  Formatting.cpp  Formatting.hpp  ImGuiGuards.hpp  KeyNames.hpp  Overlay.cpp  Overlay.hpp  OverlayLayoutManager.cpp  OverlayLayoutManager.hpp  OverlayRender.cpp  OverlayRenderHelpers.cpp  OverlayWindow.cpp  OverlayWindow.hpp  RankIconAssets.cpp  RankIconAssets.hpp  RenderContext.hpp  RenderHelpers.hpp  ThemeManager.cpp  ThemeManager.hpp  TrayIcon.cpp  TrayIcon.hpp  WindowUtils.hpp
src/ui/panels/: DashboardPanel.cpp  DashboardPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp
src/ui/widgets/: MmrGraphWidget.cpp  MmrGraphWidget.hpp  ToggleWidget.cpp  ToggleWidget.hpp
src/updater/: main.cpp
test_data/: config.json  matches.jsonl  mmr_history.jsonl
tests/core/: test_Concurrency.cpp  test_Config.cpp  test_ControllerBindings.cpp  test_InputManager.cpp  test_StatsApiConfig.cpp  test_Storage.cpp  test_TelemetryReducer_Identity.cpp  test_TelemetryReducer_MatchValidation.cpp  test_TelemetryReducer_Stats.cpp  test_VersionConsistency.cpp
tests/database/: test_DatabaseManager.cpp
tests/fuzz/: fuzz_ConfigParser.cpp
tests/integration/: test_OmniStatsPipeline.cpp
tests/network/: test_CurlImpersonate.cpp  test_DiscordManager.cpp  test_MMRFetcher.cpp  test_ReplayUploader.cpp  test_StatsClient.cpp  test_TelemetryManager.cpp  test_Updater.cpp
tests/ui/: test_ImGuiGuards.cpp  test_MmrGraphWidgetState.cpp  test_OverlayDashboard.cpp  test_OverlayDbFetch.cpp  test_OverlayHeadless.cpp  test_OverlaySettings.cpp  test_ToggleWidget.cpp  test_WindowUtils.cpp
